--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 	<head>
 		<title>Conway Fall — A Game of Life (WebGL Edition)</title>
         <meta http-equiv="Content-Type" content="charset=utf-8">
+        <meta property="og:title" content="Conway Fall &#x2014; A Game of Life (WebGL Edition)" />
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="http://xpl.github.com/conway-fall/" />
+		<meta property="og:image" content="http://xpl.github.com/conway-fall/preview.jpg" />
+		<meta property="og:site_name" content="Conway Fall" />
+		<meta property="fb:admins" content="1174148385" />
 		<link rel="stylesheet" type="text/css" href="jquery-ui-1.8.16.custom.css"></link>
 		<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css"></link>
 		<link rel="stylesheet" type="text/css" href="main.css"></link>
@@ -185,6 +191,14 @@
 		</script>
 	</head>
 	<body>
+		<div id="fb-root"></div>
+		<script>(function(d, s, id) {
+		  var js, fjs = d.getElementsByTagName(s)[0];
+		  if (d.getElementById(id)) return;
+		  js = d.createElement(s); js.id = id;
+		  js.src = "http://connect.facebook.net/en_US/all.js#xfbml=1";
+		  fjs.parentNode.insertBefore(js, fjs);
+		}(document, 'script', 'facebook-jssdk'));</script>
 		<div class="bar controls">
 			<span class="control-label">size X</span><div class="width slider"></div>
 			<span class="control-label">size Y</span><div class="height slider"></div>
@@ -220,6 +234,16 @@
 					<li><a href="javascript:{}" class="reset" data-reset-with="nothing">emptiness</a></li>
 				</ul>
 			</div>
+			<div class="share">
+				<button class="btn btn-inverse btn-single btn-share">
+					<i class="icon-share icon-white"></i>facebook / twitter
+				</button>
+				<div class="dropdown">
+					<div class="fb-like" data-href="http://xpl.github.com/conway-fall/" data-send="false" data-layout="button_count" data-width="100" data-show-faces="true" data-colorscheme="dark"></div>
+					<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://xpl.github.com/conway-fall/">Tweet</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="http://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+				</div>
+			</div>
 		</div>
 		<div class="viewport-container">
 			<canvas class="viewport" />
@@ -241,5 +265,8 @@
 				<a href="http://www.khronos.org/webgl/wiki/Main_Page" class="btn">More info</a>
 			</div>
 		</div>
+		<script type="text/javascript"> var _gaq = _gaq || []; _gaq.push(['_setAccount', 'UA-35679860-1']); _gaq.push(['_trackPageview']);
+			(function() { var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true; ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js'; var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s); })();
+		</script>
 	</body>
 </html>
