--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 			</div>
 			<div class="share">
 				<button class="btn btn-inverse btn-single btn-share">
-					<i class="icon-share icon-white"></i>facebook / twitter
+					<i class="icon-share icon-white"></i>like / tweet
 				</button>
 				<div class="dropdown">
 					<div class="fb-like" data-href="http://xpl.github.com/conway-fall/" data-send="false" data-layout="button_count" data-width="100" data-show-faces="true" data-colorscheme="dark"></div>
@@ -244,6 +244,7 @@
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="http://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 				</div>
 			</div>
+			<button class="btn btn-inverse btn-single btn-info"><i class="icon-info-sign icon-white"></i></button>
 		</div>
 		<div class="viewport-container">
 			<canvas class="viewport" />
@@ -263,6 +264,20 @@
 			</div>
 			<div class="modal-footer">
 				<a href="http://www.khronos.org/webgl/wiki/Main_Page" class="btn">More info</a>
+			</div>
+		</div>
+		<div class="modal info hide fade" role="dialog">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+				<h3 id="myModalLabel">About</h3>
+			</div>
+			<div class="modal-body">
+				<p>This is the classic Conway's Game of Life (which is a cellular automata) implemented in JavaScript and hardware-accelerated WebGL. Read <a href="http://en.wikipedia.org/wiki/Conway's_Game_of_Life">Wikipedia article</a> about it.</p>
+				<p>Source code available at GitHub: <a href="https://github.com/xpl/conway-fall">https://github.com/xpl/conway-fall</a></p>
+				<p>My email is <a href="mailto:rocket.mind@gmail.com">rocket.mind@gmail.com</a></p>
+			</div>
+			<div class="modal-footer">
+				<button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
 			</div>
 		</div>
 		<script type="text/javascript"> var _gaq = _gaq || []; _gaq.push(['_setAccount', 'UA-35679860-1']); _gaq.push(['_trackPageview']);
