--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
         <meta http-equiv="Content-Type" content="charset=utf-8">
         <meta property="og:title" content="Conway Fall &#x2014; A Game of Life (WebGL Edition)" />
 		<meta property="og:type" content="website" />
-		<meta property="og:url" content="http://xpl.github.com/conway-fall/" />
-		<meta property="og:image" content="http://xpl.github.com/conway-fall/preview.jpg" />
+		<meta property="og:description" content="The classic Conway's Game of Life implemented in JavaScript and hardware-accelerated WebGL." />
+		<meta property="og:url" content="http://xpl.github.com/conway-fall-2/" />
+		<meta property="og:image" content="http://xpl.github.com/conway-fall-2/preview.jpg" />
 		<meta property="og:site_name" content="Conway Fall" />
 		<meta property="fb:admins" content="1174148385" />
-		<link rel="image_src" href="http://xpl.github.com/conway-fall/preview.jpg" />
+		<link rel="image_src" href="http://xpl.github.com/conway-fall-2/preview.jpg" />
 		<link rel="stylesheet" type="text/css" href="jquery-ui-1.8.16.custom.css" />
 		<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css" />
 		<link rel="stylesheet" type="text/css" href="main.css" />
@@ -219,7 +220,7 @@
 					<i class="icon-share icon-white"></i>like / tweet
 				</button>
 				<div class="dropdown">
-					<div class="fb-like" data-href="http://xpl.github.com/conway-fall/" data-send="false" data-layout="button_count" data-width="100" data-show-faces="true" data-colorscheme="dark"></div>
+					<div class="fb-like" data-href="http://xpl.github.com/conway-fall-2/" data-send="false" data-layout="button_count" data-width="100" data-show-faces="true" data-colorscheme="dark"></div>
 					<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://xpl.github.com/conway-fall/">Tweet</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="http://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 				</div>
