facebook og fetching bugs

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
         <meta property="og:title" content="Conway Fall &#x2014; A Game of Life (WebGL Edition)" />
 		<meta property="og:type" content="website" />
 		<meta property="og:description" content="The classic Conway's Game of Life implemented in JavaScript and hardware-accelerated WebGL." />
-		<meta property="og:url" content="http://xpl.github.com/conway-fall-2/" />
-		<meta property="og:image" content="http://xpl.github.com/conway-fall-2/preview.jpg" />
+		<meta property="og:url" content="http://xpl.github.com/life/" />
+		<meta property="og:image" content="http://xpl.github.com/life/preview.jpg" />
 		<meta property="og:site_name" content="Conway Fall" />
 		<meta property="fb:admins" content="1174148385" />
-		<link rel="image_src" href="http://xpl.github.com/conway-fall-2/preview.jpg" />
+		<link rel="image_src" href="http://xpl.github.com/life/preview.jpg" />
 		<link rel="stylesheet" type="text/css" href="jquery-ui-1.8.16.custom.css" />
 		<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css" />
 		<link rel="stylesheet" type="text/css" href="main.css" />
@@ -220,8 +220,8 @@
 					<i class="icon-share icon-white"></i>like / tweet
 				</button>
 				<div class="dropdown">
-					<div class="fb-like" data-href="http://xpl.github.com/conway-fall-2/" data-send="false" data-layout="button_count" data-width="100" data-show-faces="true" data-colorscheme="dark"></div>
-					<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://xpl.github.com/conway-fall/">Tweet</a>
+					<div class="fb-like" data-href="http://xpl.github.com/life/" data-send="false" data-layout="button_count" data-width="100" data-show-faces="true" data-colorscheme="dark"></div>
+					<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://xpl.github.com/life/">Tweet</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="http://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 				</div>
 			</div>
@@ -287,7 +287,7 @@
 			</div>
 			<div class="modal-body">
 				<p>This is the classic Conway's Game of Life (which is a cellular automata) implemented in JavaScript and hardware-accelerated WebGL. Read <a href="http://en.wikipedia.org/wiki/Conway's_Game_of_Life">Wikipedia article</a> about it.</p>
-				<p>Source code available at GitHub: <a href="https://github.com/xpl/conway-fall">https://github.com/xpl/conway-fall</a></p>
+				<p>Source code available at GitHub: <a href="https://github.com/xpl/life">https://github.com/xpl/life</a></p>
 				<p>My email is <a href="mailto:rocket.mind@gmail.com">rocket.mind@gmail.com</a></p>
 			</div>
 			<div class="modal-footer">
