--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 	<head>
-		<title>Conway Fall — A Game of Life (WebGL Edition)</title>
+		<title>Conway Fall — A Game of Life</title>
         <meta http-equiv="Content-Type" content="charset=utf-8">
-        <meta property="og:title" content="Conway Fall &#x2014; A Game of Life (WebGL Edition)" />
+        <meta property="og:title" content="Conway Fall &#x2014; A Game of Life" />
 		<meta property="og:type" content="website" />
 		<meta property="og:description" content="The classic Conway's Game of Life implemented in JavaScript and hardware-accelerated WebGL." />
 		<meta property="og:url" content="http://xpl.github.com/life/" />
