--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 			<div class="modal-body">
 				<p>This is the classic Conway's Game of Life (which is a cellular automata) implemented in JavaScript and hardware-accelerated WebGL. Read <a href="http://en.wikipedia.org/wiki/Conway's_Game_of_Life">Wikipedia article</a> about it.</p>
 				<p>Source code available at GitHub: <a href="https://github.com/xpl/life">https://github.com/xpl/life</a></p>
-				<p>My email is <a href="mailto:rocket.mind@gmail.com">rocket.mind@gmail.com</a></p>
+				<p>Feedback to <a href="http://facebook.com/ololoe">facebook.com/ololoe</a> or <a href="mailto:rocket.mind@gmail.com">rocket.mind@gmail.com</a></p>
 			</div>
 			<div class="modal-footer">
 				<button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
