--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 		    uniform sampler2D brush;
 		    uniform vec2 origin;
 		    uniform vec2 scale;
+		    uniform vec3 color;
 		    void main (void) {
 		    	vec4 dstCell = texture2D (canvas, texCoord);
 		    	vec2 texCoord = (((fragmentPosition - origin) / scale) + 1.0) * 0.5;
@@ -90,7 +91,7 @@
 		    	} else {
 		        	vec4 srcCell = texture2D (brush, texCoord);
 		        	if (srcCell.x > 0.5) {
-		        		gl_FragColor = vec4 (1.0, 1.0, 0.0, 1.0); /* born */
+		        		gl_FragColor = vec4 (color, 1.0); /* born */
 		        	} else {
 		        		gl_FragColor = dstCell;
 		        	}
@@ -108,6 +109,7 @@
 		    uniform mat4 pixelSpace;
 		    uniform vec2 seed;
 		    uniform bool noise;
+		    uniform float fill;
 		    float rand (vec2 co) {
     			return fract (sin (dot (co.xy ,vec2 (12.9898,78.233))) * 43758.5453) > 0.6 ? 1.0 : 0.0;
 			}
@@ -126,7 +128,7 @@
 		    		(vec4(brushPosition1,1,1)*pixelSpace).xy,
 		    		(vec4(brushPosition2,1,1)*pixelSpace).xy,
 		    		(vec4(fragmentPosition,1,1)*pixelSpace).xy) < brushSize * brushSize) {
-		    		gl_FragColor = vec4 (noise ? rand (seed + fragmentPosition) : 1.0, 0.98, 1.0, 1.0);
+		    		gl_FragColor = vec4 (fill * (noise ? rand (seed + fragmentPosition) : 1.0), 0.98, 1.0, 1.0);
 		    	} else {
 		    		gl_FragColor = texture2D (cells, texCoord);
 		    	}
