--- a/index.html
+++ b/index.html
@@ -277,8 +277,8 @@
 			<span class="control-label">size X</span><div class="width slider"></div>
 			<span class="control-label">size Y</span><div class="height slider"></div>
 			<span class="control-label">fall</span><div class="scroll-speed slider"></div>
-			<span class="control-label">brush</span>
 			<span class="brush-settings round">
+				<span class="control-label" style="margin-right: 4px;">brush</span>
 				<div class="brush-scale slider"></div>
 				<div class="pattern-brush-scale slider"></div>
 				<div class="btn-group brush-type" data-toggle="buttons-radio">
@@ -303,7 +303,7 @@
 			<div class="btn-group btn-reset">
 				<button class="btn btn-inverse reset" title="hotkey: <strong>escape</strong>">reset</button>
 				<button class="btn btn-inverse dropdown-toggle" data-toggle="dropdown" href="javascript:{}"><span class="caret"></span></button>
-				<ul class="dropdown-menu">
+				<ul class="dropdown-menu pull-right">
 					<li><a href="javascript:{}" class="reset" data-reset-with="noise">random noise</a></li>
 					<li><a href="javascript:{}" class="reset" data-reset-with="nothing">emptiness</a></li>
 				</ul>
