--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
 				<h3 id="myModalLabel">About</h3>
 			</div>
 			<div class="modal-body">
-				<p>This is the classic Conway's Game of Life (which is a cellular automata) implemented in JavaScript and hardware-accelerated WebGL. Read <a href="http://en.wikipedia.org/wiki/Conway's_Game_of_Life">Wikipedia article</a> about it.</p>
+				<p>This is the classic Conway's Game of Life implemented in JavaScript and hardware-accelerated WebGL. Read <a href="http://en.wikipedia.org/wiki/Conway's_Game_of_Life">Wikipedia article</a> about it.</p>
 				<p>Source code available at GitHub: <a href="https://github.com/xpl/life">https://github.com/xpl/life</a></p>
 				<p>Feedback to <a href="http://facebook.com/ololoe">facebook.com/ololoe</a> or <a href="mailto:rocket.mind@gmail.com">rocket.mind@gmail.com</a></p>
 			</div>
