--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
 				<p>Source code available at GitHub: <a href="https://github.com/xpl/life">https://github.com/xpl/life</a></p>
 				<p>Send feedback to <a href="http://facebook.com/ololoe">facebook.com/ololoe</a> / <a href="mailto:rocket.mind@gmail.com">rocket.mind@gmail.com</a></p>
 				<p>	
-					<div class="fb-like" data-href="http://xpl.github.com/life/" data-send="false" data-layout="button_count" data-width="100" data-show-faces="true" data-colorscheme="dark"></div>
+					<div class="fb-like" data-href="http://xpl.github.com/life/" data-send="false" data-layout="button_count" data-width="100" data-show-faces="true"></div>
 					<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://xpl.github.com/life/">Tweet</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="http://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 				</p>
