--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 			<div class="btn-group btn-reset">
 				<button class="btn btn-inverse reset" title="hotkey: <strong>escape</strong>">reset</button>
 				<button class="btn btn-inverse dropdown-toggle" data-toggle="dropdown" href="javascript:{}"><span class="caret"></span></button>
-				<ul class="dropdown-menu pull-right">
+				<ul class="dropdown-menu">
 					<li><a href="javascript:{}" class="reset" data-reset-with="noise">random noise</a></li>
 					<li><a href="javascript:{}" class="reset" data-reset-with="nothing">emptiness</a></li>
 				</ul>
