default brush is noise now

--- a/index.html
+++ b/index.html
@@ -291,13 +291,13 @@
 				<div class="pattern-brush-scale slider"></div>
 				<div class="btn-group brush-type" data-toggle="buttons-radio">
 					<button
-						class="btn btn-inverse noise"
-						data-brush-type="noise"
-						title="hotkey: <strong>N</strong>">noise</button>
-					<button
-						class="btn btn-inverse round active"
+						class="btn btn-inverse round"
 						data-brush-type="round"
 						title="hotkey: <strong>R</strong>">round</button>
+					<button
+						class="btn btn-inverse noise active"
+						data-brush-type="noise"
+						title="hotkey: <strong>N</strong>">noise</button>
 					<button
 						class="btn btn-inverse pattern"
 						data-brush-type="pattern"
