--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		        	 pixelAt (vec2 (-1.0,  0.0))).x;
 		    	if (cell.x > 0.1 && (neighbours > 3.1 || neighbours < 1.9)) {
 		    		gl_FragColor = vec4 (0.0, 1.0, cell.z, 1.0); /* die */
-		    	} else if (cell.x < 0.9 && neighbours > 2.9 && neighbours < 3.1) {
+		    	} else if (neighbours > 2.9 && neighbours < 3.1) {
 		    		gl_FragColor = vec4 (1.0, 1.0, 0.0, 1.0); /* born */
 		    	} else {
 		    		gl_FragColor = cell * vec4 (1.0, 0.994, 1.0, 1.0);
@@ -102,7 +102,7 @@
 			        	 pixelAt (vec2 (-1.0,  0.0))).x;
 			    	if (cell.x > 0.1 && (neighbours > 3.1 || neighbours < 1.9)) {
 			    		cell = vec4 (0.0, 1.0, cell.z, 1.0); /* die */
-			    	} else if (cell.x < 0.9 && neighbours > 2.9 && neighbours < 3.1) {
+			    	} else if (neighbours > 2.9 && neighbours < 3.1) {
 			    		cell = vec4 (1.0, 1.0, 0.0, 1.0); /* born */
 			    	} else {
 			    		cell = cell * vec4 (1.0, 0.994, 1.0, 1.0);
@@ -171,7 +171,7 @@
 				        	 pixelAt (vec2 (-1.0,  0.0))).x;
 				    	if (cell.x > 0.1 && (neighbours > 3.1 || neighbours < 1.9)) {
 				    		cell = vec4 (0.0, 1.0, cell.z, 1.0); /* die */
-				    	} else if (cell.x < 0.9 && neighbours > 2.9 && neighbours < 3.1) {
+				    	} else if (neighbours > 2.9 && neighbours < 3.1) {
 				    		cell = vec4 (1.0, 1.0, 0.0, 1.0); /* born */
 				    	} else {
 				    		cell = cell * vec4 (1.0, 0.994, 1.0, 1.0);
