changed round brush tooltip

--- a/index.html
+++ b/index.html
@@ -301,11 +301,10 @@
 					<button
 						class="btn btn-inverse round"
 						data-brush-type="round"
-						title="hotkey: <strong>R</strong>">round</button>
+						title="<strong>shift</strong> to erase">round</button>
 					<button
 						class="btn btn-inverse noise active"
-						data-brush-type="noise"
-						title="hotkey: <strong>N</strong>">noise</button>
+						data-brush-type="noise">noise</button>
 					<button
 						class="btn btn-inverse pattern"
 						data-brush-type="pattern"
