changed clear btn location

--- a/index.html
+++ b/index.html
@@ -279,14 +279,6 @@
 				</div>
 			</div>
 			<button class="btn btn-inverse btn-single btn-info"><i class="icon-info-sign icon-white"></i></button>
-			<div class="btn-group btn-reset">
-				<button class="btn btn-inverse reset" title="hotkey: <strong>escape</strong>">clear</button>
-				<button class="btn btn-inverse dropdown-toggle" data-toggle="dropdown" href="javascript:{}"><span class="caret"></span></button>
-				<ul class="dropdown-menu">
-					<li><a href="javascript:{}" class="reset" data-reset-with="noise">random noise</a></li>
-					<li><a href="javascript:{}" class="reset" data-reset-with="nothing">emptiness</a></li>
-				</ul>
-			</div>
 			<button class="btn btn-inverse btn-single btn-pause" title="hotkey: <strong>space</strong>">
 				<i class="icon-pause icon-white"></i>pause
 			</button>
@@ -315,6 +307,14 @@
 			<span class="control-label">size Y</span><div class="height slider"></div>
 			<!--<span class="control-label">speed</span><div class="speed slider"></div>-->
 			<div class="btn-group">
+				<button class="btn btn-inverse reset" title="hotkey: <strong>escape</strong>">clear</button>
+				<button class="btn btn-inverse dropdown-toggle" data-toggle="dropdown" href="javascript:{}"><span class="caret"></span></button>
+				<ul class="dropdown-menu">
+					<li><a href="javascript:{}" class="reset" data-reset-with="noise">random noise</a></li>
+					<li><a href="javascript:{}" class="reset" data-reset-with="nothing">emptiness</a></li>
+				</ul>
+			</div>
+			<div class="btn-group" style="margin-left: 0;">
 				<button class="btn btn-inverse btn-single btn-rules yes dropdown-toggle">
 					<i class="icon-pencil icon-white"></i>rules
 					<span class="caret"></span>
