--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<link rel="stylesheet" type="text/css" href="jquery-ui-1.8.16.custom.css" />
 		<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css" />
 		<link rel="stylesheet" type="text/css" href="main.css" />
+		<script src="http://connect.facebook.net/en_US/all.js"></script>
 		<script src="jquery-1.8.2.min.js"></script>
 		<script src="jquery-ui-1.9.0.custom.min.js"></script>
 		<script src="jquery.mousewheel.js"></script>
@@ -250,22 +251,15 @@
 	<body>
 		<div id="fb-root"></div>
 		<script>
-		  window.fbAsyncInit = function() {
+		  $(document).ready (function () {
 		    FB.init({
 		      appId      : '292298590870600',
 		      channelUrl : 'http://xpl.github.com/channel.html',
 		      status     : true,
 		      cookie     : false,
 		      xfbml      : true
-		    });
-		  };
-		  (function(d){
-		     var js, id = 'facebook-jssdk', ref = d.getElementsByTagName('script')[0];
-		     if (d.getElementById(id)) {return;}
-		     js = d.createElement('script'); js.id = id; js.async = true;
-		     js.src = "//connect.facebook.net/en_US/all.js";
-		     ref.parentNode.insertBefore(js, ref);
-		   }(document));
+		    })
+		  })
 		</script>
 		<div class="bar controls">
 			<div class="share">
@@ -312,6 +306,7 @@
 				<ul class="dropdown-menu">
 					<li><a href="javascript:{}" class="reset" data-reset-with="noise">random noise</a></li>
 					<li><a href="javascript:{}" class="reset" data-reset-with="nothing">emptiness</a></li>
+					<li><a href="javascript:{}" class="reset" data-reset-with="nothing">universal Turing machine</a></li>
 				</ul>
 			</div>
 			<div class="btn-group" style="margin-left: 0;">
