--- a/index.html
+++ b/index.html
@@ -36,6 +36,17 @@
 		        gl_FragColor = vec4 (noise, 1, 0, 1);
 		    }
 		</script>
+		<script id="cell-update-from-bitmap-fs" type="x-shader/x-fragment">
+		    precision mediump float;
+		    varying vec2 texCoord;
+		    uniform sampler2D source;
+		    void main (void) {
+		    	vec4 sourceColor = texture2D (source, texCoord);
+		    	float sum = (sourceColor.r + sourceColor.g + sourceColor.b) / 3.0;
+		    	float alive = sum < 0.5 ? 1.0 : 0.0;
+		        gl_FragColor = vec4 (alive, alive, 0.0, 1.0);
+		    }
+		</script>
 		<script id="cell-iteration-fs" type="x-shader/x-fragment">
 		    precision highp float;
 		    varying vec2 texCoord;
@@ -249,18 +260,20 @@
 		</script>
 	</head>
 	<body>
-		<div id="fb-root"></div>
-		<script>
-		  $(document).ready (function () {
-		    FB.init({
-		      appId      : '292298590870600',
-		      channelUrl : 'http://xpl.github.com/channel.html',
-		      status     : true,
-		      cookie     : false,
-		      xfbml      : true
-		    })
-		  })
-		</script>
+		<!-- facebook SDK init { -->
+			<div id="fb-root"></div>
+			<script>
+			  $(document).ready (function () {
+			    FB.init({
+			      appId      : '292298590870600',
+			      channelUrl : 'http://xpl.github.com/channel.html',
+			      status     : true,
+			      cookie     : false,
+			      xfbml      : true
+			    })
+			  })
+			</script>
+		<!-- } facebook SDK init -->
 		<div class="bar controls">
 			<div class="share">
 				<button class="btn btn-inverse btn-single btn-share">
@@ -301,12 +314,12 @@
 			<span class="control-label">size Y</span><div class="height slider"></div>
 			<!--<span class="control-label">speed</span><div class="speed slider"></div>-->
 			<div class="btn-group">
-				<button class="btn btn-inverse reset" title="hotkey: <strong>escape</strong>">clear</button>
+				<button class="btn btn-inverse reset" title="hotkey: <strong>escape</strong>">reset</button>
 				<button class="btn btn-inverse dropdown-toggle" data-toggle="dropdown" href="javascript:{}"><span class="caret"></span></button>
 				<ul class="dropdown-menu">
 					<li><a href="javascript:{}" class="reset" data-reset-with="noise">random noise</a></li>
 					<li><a href="javascript:{}" class="reset" data-reset-with="nothing">emptiness</a></li>
-					<li><a href="javascript:{}" class="reset" data-reset-with="nothing">universal Turing machine</a></li>
+					<li><a href="javascript:{}" class="reset" data-reset-with="turing">universal Turing machine</a></li>
 				</ul>
 			</div>
 			<div class="btn-group" style="margin-left: 0;">
@@ -323,7 +336,7 @@
 		</div>
 		<div class="modal no-webgl hide fade" role="dialog">
 			<div class="modal-header">
-				<h3 id="myModalLabel">Whoopsy-daisy, no WebGL support detected</h3>
+				<h3>Whoopsy-daisy, no WebGL support detected</h3>
 			</div>
 			<div class="modal-body">
 				<p>WebGL enables nice and smooth hardware-accelerated graphics for web applications. It is now supported in latest versions of Google Chrome, Firefox or Safari (you may want to update your browser). Not sure about IE.</p>
@@ -341,7 +354,7 @@
 		<div class="modal info hide fade" role="dialog">
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-				<h3 id="myModalLabel">About</h3>
+				<h3>About</h3>
 			</div>
 			<div class="modal-body">
 				<p>This is the classic Conway's Game of Life implemented in JavaScript and hardware-accelerated WebGL. Read <a href="http://en.wikipedia.org/wiki/Conway's_Game_of_Life">Wikipedia article</a> about it.</p>
@@ -355,6 +368,11 @@
 			</div>
 			<div class="modal-footer">
 				<button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+			</div>
+		</div>
+		<div class="modal-overlay loading" style="display:none;">
+			<div class="modal">
+				<h5>loading...</h5>
 			</div>
 		</div>
 		<script type="text/javascript"> var _gaq = _gaq || []; _gaq.push(['_setAccount', 'UA-35679860-1']); _gaq.push(['_trackPageview']);
