changed some ids for clarity

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<script src="3d.js"></script>
 		<script src="main.js"></script>
 		<!-- shaders -->
-		<script id="cell-initial-setup-fs" type="x-shader/x-fragment">
+		<script id="cell-random-noise-fs" type="x-shader/x-fragment">
 		    precision mediump float;
 		    varying vec2 fragmentPosition;
 		    uniform vec2 seed;
