--- a/index.html
+++ b/index.html
@@ -270,14 +270,14 @@
 						cookie     : false,
 						xfbml      : true
 					})
-				}
+				};
 				(function(d){
 					var js, id = 'facebook-jssdk', ref = d.getElementsByTagName('script')[0];
 					if (d.getElementById(id)) {return;}
 					js = d.createElement('script'); js.id = id; js.async = true;
-					js.src = "//connect.facebook.net/en_US/all.js";
+					js.src = "http://connect.facebook.net/en_US/all.js";
 					ref.parentNode.insertBefore(js, ref);
-				}(document))
+				}(document));
 			</script>
 		<!-- } facebook SDK init -->
 		<div class="bar controls">
