pixel-perfect the UI, removed unwanted continuous painting behavior

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 		<!-- } facebook SDK init -->
 		<div class="bar controls">
 			<div class="share">
-				<button class="btn btn-inverse btn-single btn-share">
+				<button class="btn btn-inverse btn-share">
 					<i class="icon-share icon-white"></i>like / tweet
 				</button>
 				<div class="dropdown">
@@ -291,11 +291,11 @@
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="http://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 				</div>
 			</div>
-			<button class="btn btn-inverse btn-single btn-info"><i class="icon-info-sign icon-white"></i></button>
-			<button class="btn btn-inverse btn-single btn-pause" title="hotkey: <strong>space</strong>">
+			<button class="btn btn-inverse btn-info"><i class="icon-info-sign icon-white"></i></button>
+			<button class="btn btn-inverse btn-pause" title="hotkey: <strong>space</strong>">
 				<i class="icon-pause icon-white"></i>pause
 			</button>
-			<button class="btn btn-inverse btn-single btn-scroll yes" title="enable/disable scroll animation">
+			<button class="btn btn-inverse btn-scroll yes" title="enable/disable scroll animation">
 				<i class="icon-remove icon-white"></i><i class="icon-arrow-down icon-white"></i>scroll
 			</button>
 			<span class="brush-settings round">
@@ -318,10 +318,11 @@
 			</span>
 			<span class="control-label">size X</span><div class="width slider"></div>
 			<span class="control-label">size Y</span><div class="height slider"></div>
-			<!--<span class="control-label">speed</span><div class="speed slider"></div>-->
 			<div class="btn-group">
 				<button class="btn btn-inverse reset" title="hotkey: <strong>escape</strong>">reset</button>
-				<button class="btn btn-inverse dropdown-toggle" data-toggle="dropdown" href="javascript:{}"><span class="caret"></span></button>
+				<button class="btn btn-inverse dropdown-toggle" data-toggle="dropdown" href="javascript:{}">
+					<span class="caret"></span>
+				</button>
 				<ul class="dropdown-menu">
 					<li><a href="javascript:{}" class="reset" data-reset-with="noise">random noise</a></li>
 					<li><a href="javascript:{}" class="reset" data-reset-with="nothing">emptiness</a></li>
@@ -329,11 +330,11 @@
 				</ul>
 			</div>
 			<div class="btn-group" style="margin-left: 0;">
-				<button class="btn btn-inverse btn-single btn-rules yes dropdown-toggle">
+				<button class="btn btn-inverse btn-rules yes dropdown-toggle">
 					<i class="icon-pencil icon-white"></i>rules
 					<span class="caret"></span>
 				</button>
-				<div class="pull-right rules-editor hide">
+				<div class="rules-editor pull-right hide">
 				</div>
 			</div>
 		</div>
