--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 	</head>
 	<body>
 		<div class="bar controls">
-			<button class="btn btn-inverse"><a href="https://xpl.github.io/expression">NEW VERSION WITH COLORS</a></button>
+			<button class="btn btn-inverse"><a href="https://xpl.github.io/expression" style="color: #CD69FF; text-decoration: none; font-weight: bold; text-shadow: 0px 1px 0px rgba(129, 68, 139, 0.23);">NEW VERSION WITH COLORS</a></button>
 			<button class="btn btn-inverse btn-info"><i class="icon-info-sign icon-white"></i></button>
 			<button class="btn btn-inverse btn-pause" title="hotkey: <strong>space</strong>">
 				<i class="icon-pause icon-white"></i>pause
